--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "homepage": "https://github.com/kylemoses/kylemoses.com#readme",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "ejs": "^2.5.6",
+    "emailjs": "^1.0.8",
     "express": "^4.6.1"
   }
 }
